Add comments and logging and change NewGameActivity to AIGameActivity